# Plaushku

./: pyproject.toml
src/plaushku/: __init__.py  visual.py
tests/: example.robot
