[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plaushku"
version = "0.2.1"
description = "A simple Robot Framework library for visual regression testing"
authors = [
    {name = "Kristijan Plaushku", email = "info@plaushkusolutions.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"

[project.dependencies]
robotframework = ">=7.0"
selenium = ">=4.0.0"
Pillow = ">=9.0.0"